@@ -3,5 +3,12 @@
 require 'asciidoctor'
 require 'asciidoctor/tabs/extensions'
 
-#RSpec.configure do |config|
-#end
+RSpec.configure do
+  def fixtures_dir
+    File.join __dir__, 'fixtures'
+  end
+
+  def fixture_file path
+    File.join fixtures_dir, path
+  end
+end
